# reservation-management-platform

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: exception_handlers.py
backend/app/api/v1/middleware/: correlation_id.py  rate_limiter.py  security_headers.py
backend/app/api/v1/routers/: auth.py  dev.py  reports.py  reservations.py  resources.py  tenants.py
backend/app/application/dtos/: auth_dtos.py  reservation_dtos.py  resource_dtos.py  tenant_dtos.py
backend/app/application/services/: auth_service.py  reservation_service.py
backend/app/core/: config.py  database.py  dependencies.py  logging.py  redis_client.py  security.py
backend/app/domain/entities/: base.py  reservation.py  resource.py  tenant.py  user.py
backend/app/domain/events/: reservation_events.py
backend/app/domain/repositories/: base.py  reservation_repository.py
backend/app/domain/value_objects/: time_slot.py
backend/app/infrastructure/database/models/: __init__.py  availability_model.py  base.py  notification_model.py  reservation_model.py  resource_model.py  tenant_model.py  user_model.py
backend/app/infrastructure/database/repositories/: reservation_repository.py  resource_repository.py  tenant_repository.py  user_repository.py
backend/app/workers/: celery_app.py  notification_tasks.py  reminder_tasks.py  report_tasks.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_endpoints.py
backend/tests/unit/test_services/: test_auth_service.py  test_reservation_service.py
backend/tests/unit/test_validators/: test_security.py  test_time_slot.py
docs/: SECURITY_ASSESSMENT.md
docs/architecture/: ARCHITECTURE.md  BUSINESS_ANALYSIS.md
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/common/: ProtectedRoute.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/reservations/: CreateReservationModal.tsx
frontend/src/hooks/: useAuth.ts  useReservations.ts  useResources.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  ReportsPage.tsx  ReservationsPage.tsx  ResourcesPage.tsx  SettingsPage.tsx
frontend/src/services/api/: auth.ts  (+5 more)
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
infrastructure/loki/: loki-config.yml  promtail-config.yml
infrastructure/nginx/: nginx.conf
infrastructure/nginx/conf.d/: default.conf
infrastructure/prometheus/: prometheus.yml
scripts/: init-db.sql
tests/e2e/: test_reservation_flow.py
tests/load/: locustfile.py
tests/postman/: develop_env.postman_environment.json  reservation_platform.postman_collection.json
(+1 files in other folders)
