[project]
name = "saas-reservation-platform"
version = "1.0.0"
description = "Enterprise multi-tenant SaaS reservation platform"
requires-python = ">=3.13"
license = { text = "MIT" }

dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "jinja2>=3.1.4",
    "aiofiles>=24.1.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "slowapi>=0.1.9",
    "tenacity>=9.0.0",
    "babel>=2.16.0",
    "pillow>=11.0.0",
    "boto3>=1.35.0",
    "flower>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.1",
    "faker>=33.0.0",
    "anyio>=4.7.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
    "types-pytz>=2024.2.0",
    "types-aiofiles>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100
select = [
    "E", "W", "F", "I", "N", "B", "C4", "UP",
    "S", "T", "RUF", "ANN", "ARG", "PTH",
]
ignore = [
    "ANN101", "ANN102", "ANN401",
    "S101",  # assert in tests
    "B008",  # fastapi Depends
]
exclude = ["alembic/versions/*.py", ".venv"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "ARG"]
"app/core/dependencies.py" = ["B008"]

[tool.black]
target-version = ["py313"]
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = ["alembic/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html --cov-fail-under=90"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/migrations/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]
